# cmake-thinking

./: .gitignore  .gitmodules  README.md
coordinate/: CMakeLists.txt
coordinate/my_hello/: CMakeLists.txt
coordinate/my_hello/include/basic_hello/: coordinate.h  interface_definition.h
coordinate/my_hello/src/: basic_hello_function.cpp  coordinate.cpp
coordinate/my_math/src/: basic_math_function.cpp
coordinate/src/: tutorial6.cpp
step0/: Makefile
step0/src/: tutorial0.cpp
step1/: CMakeLists.txt
step1/src/: tutorial1.cpp
step2/: CMakeLists.txt  README.md
step2/src/: tutorial2.cpp
step3/: CMakeLists.txt
step3/src/: hello.cpp  my_math.cpp  tutorial3.cpp
step4/: CMakeLists.txt
step4/my_math/: CMakeLists.txt
step4/my_math/include/complex_math/: complex_math_function.h
step4/src/: tutorial4.cpp
step5/: CMakeLists.txt
step5/my_hello/: CMakeLists.txt
step5/my_hello/include/basic_hello/: basic_hello_function.h
step5/my_math/include/basic_math/: basic_math_function.h
step5/src/: tutorial5.cpp
step6/: CMakeLists.txt  README.md
step6/my_math/src/: complex_math_function.cpp
step7/: CMakeLists.txt  README.md  build.sh  run.sh
step7/src/: tutorial6.cpp
